package Protocol.Battle.B2BM;
message MSG_B2BM_HEARTBEAT {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

message MSG_B2BM_REGISTER {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

