package Protocol.BattleManager.BM2B;
message MSG_BM2B_HEARTBEAT {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

message MSG_BM2B_RETRUN_REGISTER {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

